--- a/AzureTools/AzureTools.csproj
+++ b/AzureTools/AzureTools.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.Storage.Blob" Version="9.4.2" />
+  </ItemGroup>
+
 </Project>
